fix: adjust navigation menu display properties for better visibility

--- a/assignment-1/furniro/assets/css/global.css
+++ b/assignment-1/furniro/assets/css/global.css
@@ -298,9 +298,10 @@ header .logo img {
 }
 
 .nav-menu-lists {
+  display: none;
   position: absolute;
   top: 100%;
-  left: 100%;
+  left: 0;
   width: 100%;
   height: 100vh;
   background-color: var(--white-color);
@@ -309,7 +310,7 @@ header .logo img {
 }
 
 #menu-toggle:checked ~ .nav-menu-lists {
-  left: 0;
+  display: block;
 }
 
 .nav-menu-lists .nav-list {
